--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
 		<section class="footer-right"> 
 			<a class="footer-phone" href="tel:+78128121212">+7 812 812-12-12</a>
 			 <p class="footer-about-text">
-			 	<a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+			 	<a class="htmlacademy-link" href="https://htmlacademy.ru/">.html</a>
+			 	<a class="htmlacademy-link" href="https://htmlacademy.ru/">academy</a>
 			 </p>
 		</section>
   	</footer>
