Доработки  главной страницы

--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@
   					<a class="footer-menu-link" href="#">Доставка</a>
   				</li>
   				<li class="footer-menu-item">
-  					 <class="footer-menu-link" href="#">Гарантия</a>
+  					<a class="footer-menu-link" href="#">Гарантия</a>
   				</li>
   				<li class="footer-menu-item">
-  					 <class="footer-menu-link" href="#">Контакты</a>
+  					<a class="footer-menu-link" href="#">Контакты</a>
   				</li>
   			</ul>
   			<ul class="footer-social-list">
