Доработка главной страницы 0.2
Доработка главной страницы 0.2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
   	<header class="page-header">
-		<a class="header-logo" title="Логотип">
+		<a class="header-logo" href="#" title="Логотип">
 			<span class="visually-hidden">Логотип интернет магазина Девайс</span>
 			<img class="logo-image" src="" alt="Логотип интернет магазина Девайс">
 		</a>
@@ -355,7 +355,7 @@
   	<footer class="page-footer">
   		<section class="footer-address">
   			<h2 class="visually-hidden">Адрес</h2>
-  			<a class="footer-logo" href="index.html">
+  			<a class="footer-logo" href="#">
   				<img class="footer-logo-image" src="" alt="Логотип интернет магазина Девайс">
   			</a>
   	
