--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img class="logo-image" src="" alt="Логотип интернет магазина Девайс">
             </a>
             <div class="header-row">
-                <form class="form-search" acrion="http://echo.htmlacademy.ru" method="get">
+                <form class="form-search" acrion="https://echo.htmlacademy.ru" method="get">
                     <label class="visually-hidden">Форма поиск</label>
                     <input class="form-search-search" type="text" placeholder="Поиск по сайту">
                     <button class="form-search-button" type="submit">Найти</button>
