--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 <body>
   <!-- HEADER START -->
   <header class="page-header container">
-    <nav class="navigation">
+    <nav class="navigation navigation-inner">
       <a class="header-logo" href="index.html" title="Логотип интернет магазина Девайс">
         <span class="visually-hidden">Логотип интернет магазина Девайс</span>
         <img class="logo-image" src="images/svg/logo.svg" width="145" height="36"
@@ -33,7 +33,7 @@
               <span class="user-menu-text">Коля Петухов</span>
             </a>
           </li>
-          <li class="user-menu-item">
+          <li class="user-menu-item user-menu-exit">
             <a class="user-menu-link link-exit" href="#">
               <span class="user-menu-text">Выйти</span>
             </a>
@@ -44,7 +44,7 @@
               <span class="user-menu-text">Сравнить</span>
             </a>
           </li>
-          <li class="user-menu-item">
+          <li class="user-menu-item user-menu-cart">
             <a class="user-menu-link menu-basket" href="#">
               <span class="menu-basket-value">2</span>
               <img class="user-menu-icon" src="images/svg/cart.svg" width="16" height="14" alt="Корзина">
@@ -58,6 +58,8 @@
           <li class="menu-item">
             <a class="menu-link" href="#">
               <span class="menu-text">Каталог товаров</span>
+              <img class="menu-icon menu-icon-plus" src="images/svg/plus.svg" alt="Раскрытие">
+              <img class="menu-icon menu-icon-minus" src="images/svg/minus.svg" alt="Скрытие">
             </a>
             <ul class="menu-submenu reset-ul">
               <li class="menu-submenu-item">
@@ -114,8 +116,8 @@
   <!-- HEADER END -->
   <!-- MAIN START -->
   <main class="main">
-    <header class="inner-header">
-      <h1 class="inner-header-title title-1">Моноподы для селфи</h1>
+    <header class="inner-header container">
+      <h1 class="inner-header-title reset-indent title-1">Моноподы для селфи</h1>
       <ul class="breadcrumbs reset-ul">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -131,31 +133,41 @@
 
     <section class="catalog">
       <div class="catalog-filters">
-        <div class="catalog-filters-row container">
-          <h2 class="catalog-filters-title title-3">Фильтр:</h2>
+        <div class="catalog-filters-row">
+          <h2 class="catalog-filters-title reset-indent title-3">Фильтр:</h2>
         </div>
         <!-- Фильтр -->
         <div class="catalog-filter-wrapper">
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Стоимость</legend>
-              <button class="range-toggle toggle-min" type="button">
-                <span class="visually-hidden">Изменить минимальную цену.</span>
-              </button>
-              <button class="range-toggle toggle-max" type="button">
-                <span class="visually-hidden">Изменить максимальную цену.</span>
-              </button>
-              <label class="catalog-filter-label"> от
-                <input class="catalog-filter-input" type="number" name="min-price"> ₽
-              </label>
-              <label class="catalog-filter-label"> до
-                <input class="catalog-filter-input" type="number" name="min-price"> ₽
-              </label>
+
+              <div class="range">
+                <div class="range-scale">
+                  <div class="range-bar" style="left: 0px; width: 119px">
+                    <button class="range-toggle toggle-min" type="button">
+                      <span class="visually-hidden">Изменить минимальную цену.</span>
+                    </button>
+                    <button class="range-toggle toggle-max" type="button">
+                      <span class="visually-hidden">Изменить максимальную цену.</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="range-wrapper-inputs">
+                <label class="catalog-filter-label">
+                  от <input class="range-input" type="number" value="0" name="min-price">
+                </label>
+                <label class="catalog-filter-label">
+                  до <input class="range-input" type="number" value="5000" name="max-price" style="width: 55px">
+                </label>
+              </div>
             </fieldset>
 
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Цвет</legend>
-              <ul class="catalog-filter-list">
+              <ul class="catalog-filter-list reset-ul">
                 <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="black" checked>
@@ -196,7 +208,7 @@
 
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Bluetooth</legend>
-              <ul class="catalog-filter-list">
+              <ul class="catalog-filter-list reset-ul">
                 <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="radio" name="bluetooth" value="yes" checked>
@@ -214,7 +226,7 @@
               </ul>
             </fieldset>
 
-            <button class="button link-detailed" type="submit">Показать</button>
+            <button class="button catalog-button" type="submit">Показать</button>
           </form>
         </div>
       </div>
@@ -230,14 +242,17 @@
                 <button class="visually-hidden" type="submit">Отсортировать</button>
               </select>
             </form>
-            <ul class="sort-dir">
+            <ul class="sort-dir reset-ul">
               <li class="sort-dir-item">
                 <a href="" class="sort-dir-link">
+                  <img class="sort-dir-icon" src="images/svg/sort-up.svg" width="11" height="10" alt="Сортировка вврех">
                   <span class="visually-hidden">Сортировка вврех</span>
                 </a>
               </li>
               <li class="sort-dir-item">
                 <a href="" class="sort-dir-link">
+                  <img class="sort-dir-icon" src="images/svg/sort-down.svg" width="11" height="10"
+                    alt="Сортировка вниз">
                   <span class="visually-hidden is-active">Сортировка вниз</span>
                 </a>
               </li>
@@ -279,7 +294,7 @@
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Профессиональная селфи-палка</a>
                 </h3>
-                <p class="product-card-price">1500 ₽</p>
+                <p class="product-card-price">1 500 ₽</p>
               </div>
             </li>
 
@@ -297,7 +312,7 @@
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Непотопляемая селфи-палка</a>
                 </h3>
-                <p class="product-card-price">2500 ₽</p>
+                <p class="product-card-price">2 500 ₽</p>
               </div>
             </li>
 
@@ -315,7 +330,7 @@
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Селфи-палка «Следуй за мной»</a>
                 </h3>
-                <p class="product-card-price">2500 ₽</p>
+                <p class="product-card-price">4 900 ₽</p>
               </div>
             </li>
           </ul>
@@ -380,7 +395,7 @@
               <svg class="social-icon" width="9" height="18" viewBox="0 0 9 18" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0V9H2V18H5V9H8.3L8.9 6H5V4.5C5 3.7 5.3 3 6.5 3Z"
-                  fill="none"></path>
+                  fill="#444444"></path>
               </svg>
               <span class="visually-hidden">Фэйсбук</span>
             </a>
@@ -391,10 +406,10 @@
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M8 10C9.10457 10 10 9.10457 10 8C10 6.89543 9.10457 6 8 6C6.89543 6 6 6.89543 6 8C6 9.10457 6.89543 10 8 10Z"
-                  fill="none"></path>
+                  fill="#444444"></path>
                 <path
                   d="M14.7 1.3C13.8 0.4 12.7 0 11.3 0H4.7C1.9 0 0 1.9 0 4.7V11.3C0 12.7 0.4 13.9 1.4 14.7C2.3 15.6 3.4 16 4.7 16H11.3C12.7 16 13.9 15.6 14.7 14.7C15.5 13.8 16 12.7 16 11.3V4.7C16 3.3 15.6 2.1 14.7 1.3ZM8 12.1C5.8 12.1 3.9 10.3 3.9 8C3.9 5.7 5.8 3.9 8 3.9C10.2 3.9 12.1 5.7 12.1 8C12.1 10.3 10.2 12.1 8 12.1ZM12.6 4.7C11.9 4.7 11.3 4.2 11.3 3.4C11.3 2.6 11.8 2.1 12.6 2.1C13.3 2.1 13.9 2.7 13.9 3.4C13.9 4.1 13.3 4.7 12.6 4.7Z"
-                  fill="none"></path>
+                  fill="#444444"></path>
               </svg>
               <span class="visually-hidden">Инстаграм</span>
             </a>
@@ -405,7 +420,7 @@
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M9.7 0.0999675C11.2 -0.400033 12.3 0.399967 12.9 1.19997C13.4 0.999967 14 0.799967 14.6 0.599967C14.6 1.39997 14.1 1.99997 13.8 2.19997C14.5 2.39997 15 1.79997 15 1.79997C14.9 2.69997 14.1 3.49997 13.6 3.69997C13.4 9.99997 10.8 14.1 4.7 14C4.2 14 4.8 14 4.3 14C4 14 0.6 13.6 0 12.2C2 12.4 3.4 11.8 4.1 11.1C3.3 10.8 1.7 10.7 1.5 8.29997C1.8 8.49997 2 8.59997 2.6 8.49997C1.5 7.69997 0.3 6.99997 0.4 4.99997C0.7 5.29997 1.3 5.49997 1.6 5.39997C1 5.19997 -0.2 2.29997 0.8 0.799967C2.4 2.49997 4.1 4.19997 7.1 4.29997C7.3 2.19997 8.1 0.799967 9.7 0.0999675Z"
-                  fill="none"></path>
+                  fill="#444444"></path>
               </svg>
               <span class="visually-hidden">Твиттер</span>
             </a>
