--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <span class="user-menu-text">Войти</span>
             </a>
           </li>
-          <li class="user-menu-item">
+          <li class="user-menu-item user-menu-compare">
             <a class="user-menu-link" href="#">
               <img class="user-menu-icon" src="images/svg/compare.svg" width="10" height="12" alt="Сравнить">
               <span class="user-menu-text">Сравнить</span>
@@ -53,6 +53,8 @@
           <li class="menu-item">
             <a class="menu-link" href="#">
               <span class="menu-text">Каталог товаров</span>
+              <img class="menu-icon menu-icon-plus" src="images/svg/plus.svg" alt="Раскрытие">
+              <img class="menu-icon menu-icon-minus" src="images/svg/minus.svg" alt="Скрытие">
             </a>
             <ul class="menu-submenu reset-ul">
               <li class="menu-submenu-item">
