--- a/catalog.html
+++ b/catalog.html
@@ -50,6 +50,36 @@
               <img class="user-menu-icon" src="images/svg/cart.svg" width="16" height="14" alt="Корзина">
               <span class="user-menu-text">Корзина</span>
             </a>
+            <div class="popover popover-cart">
+              <h2 class="visually-hidden">Корзина</h2>
+              <ul class="cart-items-list reset-ul">
+                <li class="cart-item">
+                  <img class="cart-item-image" src="images/catalog/product-1-small.png" width="41" height="43"
+                    alt="Любительская селфи-палка">
+                  <p class="cart-item-title reset-indent">Любительская селфи-палка</p>
+                  <button class="cart-item-button" type="button">
+                    <img class="cart-item-icon" src="images/svg/delete.svg" width="11" height="11" alt="Закрыть">
+                  </button>
+                </li>
+                <li class="cart-item">
+                  <img class="cart-item-image" src="images/catalog/product-2-small.png" width="41" height="43"
+                    alt="Любительская селфи-палка">
+                  <p class="cart-item-title reset-indent">Профессиональная селфи-палка</p>
+                  <button class="cart-item-button" type="button">
+                    <img class="cart-item-icon" src="images/svg/delete.svg" width="11" height="11" alt="Закрыть">
+                  </button>
+                </li>
+              </ul>
+              <div class="cart-items-result">
+                <p class="items-result-text reset-indent">Товаров: 2</p>
+                <p class="items-result-text reset-indent">Сумма: 2000 ₽</p>
+              </div>
+              <div class="cart-button-wrapper">
+                <button class="button cart-button" type="button">
+                  Открыть корзину
+                </button>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
@@ -243,7 +273,7 @@
               </select>
             </form>
             <ul class="sort-dir reset-ul">
-              <li class="sort-dir-item">
+              <li class="sort-dir-item sort-dir-active">
                 <a href="" class="sort-dir-link">
                   <img class="sort-dir-icon" src="images/svg/sort-up.svg" width="11" height="10" alt="Сортировка вврех">
                   <span class="visually-hidden">Сортировка вврех</span>
@@ -262,16 +292,13 @@
         <div class="catalog-wrapper">
           <ul class="product-list reset-ul">
             <li class="product-card">
-              <div class="product-card-header">
-                <a href="#">
-                  <img class="product-card-image" src="images/catalog/product_1.png" width="360" height="380"
-                    alt="Любительская селфи-палка">
-                  <span class="product-card-overlay">
-                    <p class="button link-detailed">Подробнее</p>
-                  </span>
-                </a>
-              </div>
-
+              <a class="product-card-header" href="#">
+                <img class="product-card-image" src="images/catalog/product_1.png" width="360" height="380"
+                  alt="Любительская селфи-палка">
+                <span class="product-card-overlay">
+                  <p class="button link-detailed">Подробнее</p>
+                </span>
+              </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Любительская селфи-палка</a>
@@ -281,15 +308,13 @@
             </li>
 
             <li class="product-card">
-              <div class="product-card-header">
-                <a href="#">
-                  <img class="product-card-image" src="images/catalog/product_2.png" width="360" height="380"
-                    alt="Профессиональная селфи-палка">
-                  <span class="product-card-overlay">
-                    <p class="button link-detailed">Подробнее</p>
-                  </span>
-                </a>
-              </div>
+              <a class="product-card-header" href="#">
+                <img class="product-card-image" src="images/catalog/product_2.png" width="360" height="380"
+                  alt="Профессиональная селфи-палка">
+                <span class="product-card-overlay">
+                  <p class="button link-detailed">Подробнее</p>
+                </span>
+              </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Профессиональная селфи-палка</a>
@@ -299,15 +324,13 @@
             </li>
 
             <li class="product-card">
-              <div class="product-card-header">
-                <a href="#">
-                  <img class="product-card-image" src="images/catalog/product_3.png" width="360" height="380"
-                    alt="Непотопляемая селфи-палка">
-                  <span class="product-card-overlay">
-                    <p class="button link-detailed">Подробнее</p>
-                  </span>
-                </a>
-              </div>
+              <a class="product-card-header" href="#">
+                <img class="product-card-image" src="images/catalog/product_3.png" width="360" height="380"
+                  alt="Непотопляемая селфи-палка">
+                <span class="product-card-overlay">
+                  <p class="button link-detailed">Подробнее</p>
+                </span>
+              </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Непотопляемая селфи-палка</a>
@@ -317,15 +340,14 @@
             </li>
 
             <li class="product-card">
-              <div class="product-card-header">
-                <a href="#">
-                  <img class="product-card-image" src="images/catalog/product_4.png" width="360" height="380"
-                    alt="Селфи-палка «Следуй за мной»">
-                  <span class="product-card-overlay">
-                    <p class="button link-detailed">Подробнее</p>
-                  </span>
-                </a>
-              </div>
+              <a class="product-card-header" href="#">
+                <div class="product-new title-3">New</div>
+                <img class="product-card-image" src="images/catalog/product_4.png" width="360" height="380"
+                  alt="Селфи-палка «Следуй за мной»">
+                <span class="product-card-overlay">
+                  <p class="button link-detailed">Подробнее</p>
+                </span>
+              </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
                   <a class="product-card-link" href="#">Селфи-палка «Следуй за мной»</a>
@@ -428,7 +450,7 @@
         </ul>
       </div>
       <div class="footer-item footer-authors">
-        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="footer-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         <a class="footer-authors-link" href="https://htmlacademy.ru/">
           <img class="footer-link-htmlacademy" src="images/svg/htmlacademy.svg" width="115" height="34"
             alt="HTML Academy">
