--- a/catalog.html
+++ b/catalog.html
@@ -245,7 +245,7 @@
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="bluetooth" value="no">
+                    <input class="visually-hidden control-input" type="radio" name="nobluetooth" value="no">
                     <span class="control-mark control-mark-radio"></span>
                     <span class="control-label">Нет</span>
                   </label>
