--- a/catalog.html
+++ b/catalog.html
@@ -4,16 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link rel="stylesheet" href="css/style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <!-- HEADER START -->
   <header class="page-header container">
     <nav class="navigation">
-      <!--navigation-inner - Убрать-->
       <a class="header-logo" href="index.html" title="Логотип интернет магазина Девайс">
         <span class="visually-hidden">Логотип интернет магазина Девайс</span>
         <img class="logo-image" src="images/svg/logo.svg" width="145" height="36"
@@ -156,14 +155,14 @@
         </li>
       </ul>
     </header>
-
+    <!-- Catalog -->
     <section class="catalog">
       <h2 class="visually-hidden">Каталог</h2>
       <div class="catalog-filters">
         <div class="catalog-filters-row">
           <h3 class="catalog-filters-title reset-indent title-3">Фильтр:</h3>
         </div>
-        <!-- Фильтр -->
+        <!-- Filter -->
         <div class="catalog-filter-wrapper">
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filter-group">
