--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link rel="stylesheet" href="css/style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -141,7 +141,7 @@
   <!-- MAIN START -->
   <main class="main">
     <h1 class="visually-hidden">Главная страница «Девайс»</h1>
-    <!-- Слайдер товара -->
+    <!-- Product Slider -->
     <section class="slider container">
       <h2 class="visually-hidden">Слайдер товаров</h2>
       <ul class="slider-list reset-ul">
@@ -254,7 +254,7 @@
         </li>
       </ol>
     </section>
-    <!-- Категория товара -->
+    <!-- Product category -->
     <section class="categories container">
       <h2 class="visually-hidden">Категории товаров</h2>
       <ul class="categories-list reset-ul">
@@ -313,7 +313,7 @@
         </li>
       </ul>
     </section>
-    <!-- Сервисы товара -->
+    <!-- Product Services -->
     <section class="services">
       <h2 class="visually-hidden">Сервисы</h2>
       <div class="services-tabs container">
@@ -360,7 +360,7 @@
         </ul>
       </div>
     </section>
-    <!-- Доставка -->
+    <!-- Delivery -->
     <section class="delivery container">
       <h2 class="visually-hidden">Доставка</h2>
       <a class="delivery-row" href="#">
@@ -374,7 +374,7 @@
         </div>
       </a>
     </section>
-    <!-- О компании -->
+    <!-- About the company -->
     <div class="company container">
       <section class="company-block about">
         <h2 class="company-title reset-indent title-1">О нас</h2>
@@ -407,7 +407,7 @@
         <a class="button company-button" href="#">Напишите нам</a>
       </section>
     </div>
-    <!-- Рассылка -->
+    <!-- Mailing -->
     <section class="newsletters">
       <div class="newsletters-wrapper container">
         <div class="newsletters-row">
@@ -503,7 +503,7 @@
     </div>
   </footer>
   <!-- FOOTER END -->
-  <!-- Модальное окно Доставки -->
+  <!-- Modal Delivery Window -->
   <div class="overlay overlay-close">
     <section class="modal">
       <div class="modal-header">
