Декоративные элементы на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,8 @@
   <title>HTML Academy: Девайс</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="images/favicon-32.png" type="image/png" sizes="32x32">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
         </form>
         <ul class="user-menu-list reset-ul">
           <li class="user-menu-item">
-            <a class="user-menu-link user-menu-in" href="#">
+            <a class="user-menu-link" href="#">
               <img class="user-menu-icon" src="images/svg/user.svg" width="13" height="12" alt="Войти">
               Коля Петухов
             </a>
@@ -151,7 +152,7 @@
           <a class="breadcrumbs-link" href="#">Каталог товаров</a>
         </li>
         <li class="breadcrumbs-item">
-          <span class="breadcrumbs-link">Моноподы для селфи</span>
+          <span class="breadcrumbs-link breadcrumbs-link-current">Моноподы для селфи</span>
         </li>
       </ul>
     </header>
@@ -244,7 +245,7 @@
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="nobluetooth" value="no">
+                    <input class="visually-hidden control-input" type="radio" name="bluetooth" value="no">
                     <span class="control-mark control-mark-radio"></span>
                     <span class="control-label">Нет</span>
                   </label>
@@ -295,7 +296,7 @@
           <ul class="product-list reset-ul">
             <li class="product-card">
               <a class="product-card-header" href="#">
-                <img class="product-card-image" src="images/catalog/product_1.png" width="360" height="380"
+                <img class="product-card-image" src="images/catalog/product-1.png" width="360" height="380"
                   alt="Любительская селфи-палка">
                 <div class="product-card-overlay">
                   <span class="button button-hover">Подробнее</span>
@@ -311,7 +312,7 @@
 
             <li class="product-card">
               <a class="product-card-header" href="#">
-                <img class="product-card-image" src="images/catalog/product_2.png" width="360" height="380"
+                <img class="product-card-image" src="images/catalog/product-2.png" width="360" height="380"
                   alt="Профессиональная селфи-палка">
                 <div class="product-card-overlay">
                   <span class="button button-hover">Подробнее</span>
@@ -319,7 +320,7 @@
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
-                  <a class="product-card-link" href="#">Профессиональная <span>селфи-палка</span></a>
+                  <a class="product-card-link" href="#">Профессиональная <br>селфи-палка</a>
                 </h3>
                 <p class="product-card-price">1 500 ₽</p>
               </div>
@@ -327,7 +328,7 @@
 
             <li class="product-card">
               <a class="product-card-header" href="#">
-                <img class="product-card-image" src="images/catalog/product_3.png" width="360" height="380"
+                <img class="product-card-image" src="images/catalog/product-3.png" width="360" height="380"
                   alt="Непотопляемая селфи-палка">
                 <div class="product-card-overlay">
                   <span class="button button-hover">Подробнее</span>
@@ -335,7 +336,7 @@
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
-                  <a class="product-card-link" href="#">Непотопляемая <span>селфи-палка</span></a>
+                  <a class="product-card-link" href="#">Непотопляемая <br>селфи-палка</a>
                 </h3>
                 <p class="product-card-price">2 500 ₽</p>
               </div>
@@ -343,7 +344,7 @@
 
             <li class="product-card product-card-new">
               <a class="product-card-header" href="#">
-                <img class="product-card-image" src="images/catalog/product_4.png" width="360" height="380"
+                <img class="product-card-image" src="images/catalog/product-4.png" width="360" height="380"
                   alt="Селфи-палка «Следуй за мной»">
                 <div class="product-card-overlay">
                   <span class="button button-hover">Подробнее</span>
@@ -351,7 +352,7 @@
               </a>
               <div class="product-card-body">
                 <h3 class="product-card-title">
-                  <a class="product-card-link" href="#">Селфи-палка «Следуй за<span> мной» </span></a>
+                  <a class="product-card-link" href="#">Селфи-палка «Следуй за <br> мной»</a>
                 </h3>
                 <p class="product-card-price">4 900 ₽</p>
               </div>
