--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>HTML Academy: Девайс</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="images/favicon-32.png" type="image/png" sizes="32x32">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
         </form>
         <ul class="user-menu-list reset-ul">
           <li class="user-menu-item">
-            <a class="user-menu-link user-menu-in" href="#">
+            <a class="user-menu-link" href="#">
               <img class="user-menu-icon" src="images/svg/user.svg" width="13" height="12" alt="Войти">
               Войти
             </a>
@@ -561,7 +562,7 @@
           <p class="modal-message"></p>
         </div>
         <div class="modal-form-group">
-          <button class="button button-order-submit" type="submit">Отправить</button>
+          <button class="button button-hover" type="submit">Отправить</button>
         </div>
       </form>
     </section>
