--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
         </ul>
-        <a class="button company-button" href="#">Напишите нам</a>
+        <button class="button company-button" type="button">Напишите нам</button>
       </section>
     </div>
     <!-- Mailing -->
@@ -521,18 +521,18 @@
           <label class="modal-form-label" for="username">Ваше имя:</label>
           <input class="modal-form-field modal-form-field-name modal-form-error" type="text" name="username"
             id="username" placeholder="Имя Фамилия" required>
-          <p class="modal-message modal-message-error">Пожалуйста, представьтесь</p>
+          <p class="modal-message modal-message-error reset-indent">Пожалуйста, представьтесь</p>
         </div>
         <div class="modal-form-group">
           <label class="modal-form-label" for="email">Ваш e-mail:</label>
           <input class="modal-form-field modal-form-field-email" type="email" name="email" id="email"
             placeholder="krasotka92@mail.ru" required>
-          <p class="modal-message">Забавный у вас адрес</p>
+          <p class="modal-message reset-indent">Забавный у вас адрес</p>
         </div>
         <div class="modal-form-group modal-form-order">
           <label class="modal-form-label" for="order">Что нужно привезти:</label>
           <input class="modal-form-field" type="text" name="order" id="order" placeholder="В свободной форме" required>
-          <p class="modal-message"></p>
+          <p class="modal-message reset-indent"></p>
         </div>
         <div class="modal-form-group modal-form-quantity">
           <div class="modal-form-hint">
@@ -560,7 +560,7 @@
               </svg>
             </button>
           </div>
-          <p class="modal-message"></p>
+          <p class="modal-message reset-indent"></p>
         </div>
         <div class="modal-form-group">
           <button class="button button-hover" type="submit">Отправить</button>
